# flask-mail-mysql

./: README.en.md  README.md
cr-api-server/: .gitignore  README.md  env.example  main.py  package.json  pip.conf  pyproject.toml  setup.py
cr-api-server/cr_api_server/: __init__.py  config.py
cr-api-server/cr_api_server/helpers/: env_utils.py
cr-api-server/cr_api_server/models/: __init__.py  data.py  user.py
cr-api-server/cr_api_server/repositorys/: props.py  token.py
cr-api-server/cr_api_server/services/: data_services.py  email_services.py  user_services.py
cr-api-server/cr_api_server/types/: user_schema.py
cr-api-server/cr_api_server/views/: __init__.py  data_view.py  user_view.py
